<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sbooker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">


    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sbooker.ui.reservations.ReservationFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_reservation" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sbooker.ui.admin.AdminFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_admin" />
</navigation>